--- a/EcommerceNB.ipynb
+++ b/EcommerceNB.ipynb
@@ -2,31 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "dried-demand",
+   "execution_count": 1,
+   "id": "promising-magic",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "affected-stylus",
+   "execution_count": 2,
+   "id": "public-elements",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(\"archive/Ecommerce Customers.csv\")"
+    "df=pd.read_csv(\"Ecommerce Customers.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "strange-month",
+   "execution_count": 3,
+   "id": "animal-plain",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +151,7 @@
        "4           599.406092  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,8 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "numerical-brooks",
+   "execution_count": 4,
+   "id": "alpine-numbers",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +172,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -194,8 +195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "japanese-pitch",
+   "execution_count": 5,
+   "id": "scheduled-nylon",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +318,7 @@
        "max                6.922689           765.518462  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,8 +329,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "polish-cassette",
+   "execution_count": 6,
+   "id": "tight-marsh",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +344,7 @@
        "        <AxesSubplot:>]], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -367,8 +368,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "revised-youth",
+   "execution_count": 7,
+   "id": "religious-oliver",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +378,7 @@
        "Text(0.5, 1.0, 'Customers Spent by App')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -405,8 +406,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "individual-blocking",
+   "execution_count": 8,
+   "id": "conditional-result",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +416,7 @@
        "Text(0.5, 1.0, 'Customers Spent by Website')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -442,8 +443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "professional-harbor",
+   "execution_count": 9,
+   "id": "roman-roman",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +453,7 @@
        "Text(0.5, 1.0, 'Customers Spent by Avg. Session Len')"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -479,8 +480,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "actual-budget",
+   "execution_count": 10,
+   "id": "loved-front",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +490,7 @@
        "Text(0.5, 1.0, 'Customers Spent by Len of Membership')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -516,8 +517,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "departmental-rhythm",
+   "execution_count": 11,
+   "id": "sporting-detroit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,8 +528,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "bigger-hollywood",
+   "execution_count": 12,
+   "id": "trying-republican",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,8 +540,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "closed-corrections",
+   "execution_count": 13,
+   "id": "steady-officer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,8 +550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "functional-establishment",
+   "execution_count": 14,
+   "id": "together-freight",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +560,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,17 +571,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "amateur-staff",
+   "execution_count": 15,
+   "id": "spoken-reducing",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8754871535362339"
+       "0.885776593912848"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,8 +592,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "measured-zimbabwe",
+   "execution_count": 16,
+   "id": "funky-latvia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,17 +603,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "assured-minimum",
+   "execution_count": 17,
+   "id": "potential-denver",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9837634793037408"
+       "0.9832266460342226"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "norman-castle",
+   "id": "parallel-combination",
    "metadata": {},
    "outputs": [
     {
@@ -648,8 +649,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "protective-vulnerability",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'model.pickle'\n",
+    "pickle.dump(reg, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "conventional-royal",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Time on App             12.655651\n",
+       "Length of Membership     4.082621\n",
+       "Time on Website         39.577668\n",
+       "Avg. Session Length     34.497268\n",
+       "Name: 0, dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.iloc[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "rational-clinton",
+   "id": "respective-fashion",
    "metadata": {},
    "source": [
     " # Lenght of Membership > Time on App > Avg. Session Length >> Time on Website"
@@ -658,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "characteristic-package",
+   "id": "requested-tunisia",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "touched-blackberry",
+   "id": "noble-fishing",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "sunset-draft",
+   "id": "colonial-value",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "interior-inspector",
+   "id": "crude-corner",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dental-serum",
+   "id": "promising-companion",
    "metadata": {},
    "outputs": [],
    "source": []
